--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,5 +1,12 @@
 $body-bg:	#bdc3c7;
+$font-family-sans-serif:	'Lato', 'Helvetica Neue' , Helvetica, Arial, sans-serif;
+$navbar-height:	45px;
 $navbar-inverse-bg: #34495e;
 $navbar-inverse-link-color: white;
+$jumbotron-bg:	white;
 
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
