Cleaned up the pins scaffold.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-
-
-<h1>About us</h1>
-<p>We are working on our One Month Rails page</p>
+<div class="jumbotron">
+	<h1>About me</h1>
+	<p>My name is Frank Hoffman, and this is my <a href="http:\\onemonth.com">One Month</a> Rails page. </p>
+</div>
