--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -3,6 +3,7 @@ $font-family-sans-serif:	'Lato', 'Helvetica Neue' , Helvetica, Arial, sans-serif
 $navbar-height:	45px;
 $navbar-inverse-bg: #34495e;
 $navbar-inverse-link-color: white;
+$brand-primary: #34495e;
 $jumbotron-bg:	white;
 
 @import 'bootstrap';
