Add pins/users association

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,9 +1,9 @@
 $body-bg:	#bdc3c7;
 $font-family-sans-serif:	'Lato', 'Helvetica Neue' , Helvetica, Arial, sans-serif;
 $navbar-height:	45px;
-$navbar-inverse-bg: #34495e;
+$navbar-inverse-bg: #428bca;
 $navbar-inverse-link-color: white;
-$brand-primary: #34495e;
+$brand-primary: #428bca;
 $jumbotron-bg:	white;
 
 @import 'bootstrap';
